[backend] aggiunto controller per fare richieste POST ticket
